--- a/beacon-chain/rpc/eth/light-client/BUILD.bazel
+++ b/beacon-chain/rpc/eth/light-client/BUILD.bazel
@@ -4,12 +4,16 @@ go_library(
     name = "go_default_library",
     srcs = [
         "handlers.go",
+	"odsl.go",
         "helpers.go",
         "server.go",
     ],
     cgo=True,
-    cdeps=["//beacon-chain/rpc/eth/c_code:foo"],
-    copts = ["-Ibeacon-chain/rpc/eth/c_code"],
+    cdeps=["//beacon-chain/rpc/eth/c_code:foo","@include//:bearssl","@oram//:odsl"],
+    copts = ["-Ibeacon-chain/rpc/eth/c_code",
+             "-I/oram/omap/interface",
+             "-I/usr/include"],
+    clinkopts=["-lstdc++ -lodsl"],
     importpath = "github.com/prysmaticlabs/prysm/v5/beacon-chain/rpc/eth/light-client",
     visibility = ["//beacon-chain:__subpackages__"],
     deps = [
